# modules-template

./: Cargo.toml  README.md
contracts/template-app/: Cargo.toml
contracts/template-app/examples/: schema.rs
contracts/template-app/src/: contract.rs  dependencies.rs  error.rs  lib.rs
contracts/template-app/src/handlers/: execute.rs  instantiate.rs  migrate.rs  query.rs  reply.rs
scripts/: Cargo.toml
