[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
template-namespace-boot = { path = "../packages/template-namespace-boot" }
boot-core = "0.2.0"
abstract-boot = "0.3.0-beta.2"
log = "0.4.14"
cosmwasm-std = { version = "1.1" }
anyhow = "1.0"
serde_json = "1.0.79"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
semver = { version = "1.0.13", default-features = false }
cw-staking = { package = "cw-staking", path = "../contracts/template-api" }
abstract-os = { workspace = true }
template-namespace = { path = "../packages/template-namespace" }
tokio = { version = "1.4", features = ["full"] }
